# SportradarDatacoreAPI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RELEASING.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api-reference.md  architecture.md  development.md  errors.md
examples/: download_game.py  download_season.py
log/: competition_id.json  fixture_8322fed8-3961-11ef-b537-9d9e873b24f2_events.csv  fixture_events.json  fixtures.json  season_id.json
notebooks/: download_season_events.ipynb  explore_season_events.ipynb
openapi/: config.yaml
scripts/: codegen.ps1  codegen.sh  shorten_file_names.py
src/_vendor/datacore_client/: __init__.py
src/_vendor/datacore_client/api/awards/: award_delete.py  awards_detail.py  awards_insert.py  awards_list_fixtures.py  awards_list_non_fixtures.py  awards_list_seasons.py  awards_update.py
src/_vendor/datacore_client/api/career_statistics/: caprs_list.py  caps_list.py  caps_list_person_season.py  caps_listperson.py
src/_vendor/datacore_client/api/change_log/: change_log_list.py
src/_vendor/datacore_client/api/club_external_i_ds/: entity_group_external_ids_delete.py  entity_group_external_ids_detail.py  entity_group_external_ids_insert.py  entity_group_external_ids_insert_update.py  entity_group_external_ids_list.py  entity_group_external_ids_update.py
src/_vendor/datacore_client/api/clubs/: entity_group_delete.py  entity_group_detail.py  entity_group_insert.py  entity_group_list.py  entity_group_update.py
src/_vendor/datacore_client/api/competition_external_i_ds/: competition_external_ids_delete.py  competition_external_ids_detail.py  competition_external_ids_insert.py  competition_external_ids_insert_update.py  competition_external_ids_list.py  competition_external_ids_update.py
src/_vendor/datacore_client/api/competition_statistics/: ces_list.py  ces_listentity.py  ces_listentity_periods.py  ces_listperiods.py  cps_list.py
src/_vendor/datacore_client/api/competitions/: competition_delete.py  competition_detail.py  competition_insert.py  competition_list.py  competition_list_by_league_id.py  competition_list_season_status.py  competition_update.py  orggroup_competition_list.py
src/_vendor/datacore_client/api/conduct/: conduct_delete.py  conduct_detail.py  conduct_insert.py  conduct_list.py  conduct_update.py
src/_vendor/datacore_client/api/conference_external_i_ds/: conference_external_ids_delete.py  conference_external_ids_detail.py  conference_external_ids_insert.py  conference_external_ids_insert_update.py  conference_external_ids_list.py  conference_external_ids_update.py
src/_vendor/datacore_client/api/conferences_divisions/: conference_delete.py  conference_detail.py  conference_insert.py  conference_list.py  conference_update.py  division_delete.py  division_detail.py  division_insert.py  division_list.py  division_update.py
src/_vendor/datacore_client/api/division_external_i_ds/: division_external_ids_delete.py  division_external_ids_detail.py  division_external_ids_insert.py  division_external_ids_insert_update.py  division_external_ids_list.py  division_external_ids_update.py
src/_vendor/datacore_client/api/download_video/: video_file_delete.py  video_file_detail.py  video_file_insert.py  video_file_list.py
src/_vendor/datacore_client/api/images/: images_delete.py  (+14 more)
src/_vendor/datacore_client/models/: __init__.py  award_delete_awards_response.py  award_delete_response_default.py  award_model.py  award_model_award.py  award_model_competition.py  award_model_competition_resource_type.py  award_model_entity.py  award_model_entity_group.py  award_model_entity_group_resource_type.py  award_model_entity_resource_type.py  award_model_fixture.py  award_model_fixture_resource_type.py  award_model_organization.py  award_model_organization_resource_type.py  award_model_person.py  award_model_person_resource_type.py  award_model_season.py  award_model_season_resource_type.py  award_post_body.py  award_post_body_award.py  award_put_body.py  award_put_body_award.py  awards_detail_awards_response.py  awards_detail_response_default.py  awards_insert_award_post_body.py  awards_insert_award_post_body_award.py  awards_insert_awards_response.py  awards_insert_response_default.py  awards_list_fixtures_award.py  awards_list_fixtures_awards_response.py  awards_list_fixtures_response_default.py  awards_list_non_fixtures_award.py  awards_list_non_fixtures_awards_response.py  awards_list_non_fixtures_response_default.py  awards_list_seasons_award.py  awards_list_seasons_awards_response.py  awards_list_seasons_response_default.py  awards_response.py  awards_update_award_put_body.py  (+2725 more)
src/datacore_client/: __init__.py
src/sportradar_datacore_api/: __init__.py  api.py  errors.py  handball.py  stream_models.py  stream_utils.py  streaming.py
src/sportradar_datacore_api/utils/handball/: data_processing.py
src/sportradar_datacore_api/workflows/handball/: competitions.py  games.py  seasons.py
test/: test_handball.py  test_streaming.py
test/handball/: test_handball.py
(+323 files in other folders)
