[project]
name = "sportradar-datacore-api"
version = "0.1.0"
description = "A Python wrapper for accessing and processing Sportradar DataCore data."
authors = [
    { name = "Michael Adams", email = "m@ad4ms.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.2"
]
keywords = ["handball", "sportradar", "api", "data", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/mad4ms/SportradarDatacoreAPI"
Repository = "https://github.com/mad4ms/SportradarDatacoreAPI"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
