[project]
name = "sportradar-datacore-api"
version = "0.1.0"
description = "A Python wrapper for accessing and processing Sportradar DataCore data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Michael Adams", email = "m@ad4ms.de" }]

keywords = ["handball", "sportradar", "api", "data", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typing-extensions>=4.8",
    "pandas>=2.2",
    "python-dotenv>=1.1",
    "requests>=2.32",
    "attrs>=25.3",
]

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.26",
    "openapi-spec-validator>=0.7",
    "pytest>=8.4",
    "pytest-order>=1.3",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/mad4ms/SportradarDatacoreAPI"
Repository = "https://github.com/mad4ms/SportradarDatacoreAPI"

# --- packaging ---
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["_vendor*", "_vendor.*"]  # do not package vendored client

# --- build ---
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# --- Ruff ---
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "src/_vendor"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PGH","PL","RUF"]
ignore = ["E203"]  # formatter compatibility

[tool.ruff.format]

# --- pytest ---
[tool.pytest.ini_options]
pythonpath = ["src", "src/_vendor"]
addopts = "-q -ra --maxfail=1"
testpaths = ["test"]

# --- mypy ---
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
